--- a/cat_facts/cats/static/css/base.css
+++ b/cat_facts/cats/static/css/base.css
@@ -38,7 +38,7 @@ body, html {
 }
 
 .nav-links a {
-    color: #fff;
+    color: gainsboro;
     text-decoration: none;
     font-size: 18px;
     transition: color 0.3s ease;
