--- a/cat_facts/cats/static/css/home.css
+++ b/cat_facts/cats/static/css/home.css
@@ -1,9 +1,9 @@
 .hero-section {
     display: flex;
     justify-content: center;
-    margin-top: 100px;
+    margin-top: 80px;
     height: 100vh; 
-    color: #fff;
+    color: gainsboro;
     text-align: center;
 }
 
@@ -37,4 +37,32 @@
 .show-btn:hover {
     background-color: #d89a1e; 
 }
+
+
+.notes-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px; 
+    justify-content: center;
+    padding: 20px;
+}
+
+.note-card {
+    width: 800px; 
+    background-color: gainsboro;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.note-card p {
+    font-size: 1em;
+    color: #333;
+    margin-bottom: 10px;
+}
+
 
